[package]
edition = "2021"
name = "check_specific_dependency_version_usage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.9"
syn = "1.0.75"
toml = "0.7.4"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"

proc_macro_helpers = {path = "../proc_macro_helpers"}
