[package]
edition = "2021"
name = "check_specific_dependency_version_usage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = {version = "=1.0.33"}
toml = {version = "=0.7.4"}
proc_macro_helpers = {path = "../proc_macro_helpers"}
